[package]
name = "tide-handlebars"
version = "0.2.0"
authors = ["Anton Whalley <anton@venshare.com>"]
edition = "2018"
description = "A crate to simplify working with Tide and Handlebars"
license = "Apache-2.0"
documentation = "https://docs.rs/tide-handlebars"
homepage = "https://github.com/no9/tide-handlebars"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = { version = "3.2.1", features = ["dir_source"] }
tide = "0.11.0"
serde = "1.0.0"

[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }

[patch.crates-io]
http-types = { git = "https://github.com/jbr/http-types", branch = "body-set-mime" }